Hours Fix and minimize the extra spacing

--- a/css/default.css
+++ b/css/default.css
@@ -1,22 +1,22 @@
 
 body{
-		width: 300px;
-		height: 500px;
-		margin: 5px 0px 5px 0px;
+		width: 290px;
+		height: 420px;
+		margin: 0px 0px 5px 0px;
 		background: #eeeeee;
 		overflow: hidden !important;
 	}
 
 	.dialog {
 		overflow: hidden;
-		padding: 5px;
+		/*padding: 5px;*/
 		background: transparent;
 		-webkit-border-radius: 3px;
 		border-radius: 3px;	
 		z-index: 1000001;
 		position: fixed;
 		width: 290px;
-		height: 500px;
+		height: 420px;
 		margin: auto;
 		color: #808080;
 	}
@@ -77,7 +77,7 @@ body{
 		font-size: 1.2em;
 		text-indent: 14px;
 		cursor: pointer;
-		margin-top: 12px;
+		/*margin-top: 12px;*/
 		margin-bottom: 10px;
 	}
 	
@@ -103,13 +103,13 @@ body{
 	}
 	#addmeasurement-dialog-content table{
 		margin: 0px;
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 		/* border-collapse: collapse; */
 		/* border: 2px solid white; */
 		border-radius: 10px 10px 5px 5px;
 		background-color: #FFFFFF;
 		width: 100%;
-		padding: 10px;
+		padding: 5px;
 	}
 	
 	#addmeasurement-dialog-content table input[type=text]{
